--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,22 +11,38 @@ jobs:
             - v1-dependencies-{{ checksum "package.json" }}
             - v1-dependencies-
       - run: npm install
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
       - run:
           name: Generate static assets
           command: npm run build && npm run generate
+      - save_cache:
+          paths:
+            - node_modules
+            - dist
+          key: v1-dependencies-{{ checksum "package.json" }}
+  deploy:
+    docker:
+      - image: circleci/node:10.15.2
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-
       - run:
           name: Login to Commons Host
           command: npx @commonshost/cli login --username $COMMONSHOST_USERNAME --password $COMMONSHOST_PASSWD
-          filters:
-            branches:
-              only: master
       - run:
           name: Publish
           command: npx @commonshost/cli deploy --domain staging2.engineers.sg --confirm
+workflows:
+  version: 2
+  build_and_deploy:
+    jobs:
+      - build
+      - deploy
+        requires:
+            - build
           filters:
             branches:
               only: master
