--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-  deploy:
+  deploy-staging:
     docker:
       - image: circleci/node:10.15.2
     working_directory: ~/repo
@@ -37,10 +37,10 @@ jobs:
 
 workflows:
   version: 2
-  build_and_deploy:
+  build-deploy:
     jobs:
       - build
-      - deploy:
+      - deploy-staging:
           requires:
             - build
           filters:
